fix for buttons not stretching when 2 cards were side by side

--- a/packages/components/src/card/src/Card.css
+++ b/packages/components/src/card/src/Card.css
@@ -107,7 +107,7 @@
 .o-ui-card-aside {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    align-self: stretch;
 }
 
 /* ASIDE | HORIZONTAL */
